--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/redux-actions": "^2.6.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redux-actions": "^3.0.0",
     "restful-react": "^15.9.4"
   },
   "devDependencies": {
