--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "redux-actions": "^3.0.0",
     "restful-react": "^15.9.4"
   },
