--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@fontsource/dosis": "^5.0.0",
     "@types/redux-actions": "^2.6.2",
     "axios": "^1.4.0",
     "next": "latest",
