--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fontsource/dosis": "^5.0.0",
     "@types/redux-actions": "^2.6.2",
     "axios": "^1.4.0",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "next": "latest",
