--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fontsource/dosis": "^5.0.0",
     "@types/redux-actions": "^2.6.2",
+    "antd": "^5.5.1",
     "axios": "^1.4.0",
     "disqus-react": "^1.1.5",
     "formik": "^2.2.9",
